--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,8 @@ form button {
   border-radius: 10px;
   width: 300px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  height: max-content;
+  margin: 10px;
 }
 
 img {
